[gd_scene load_steps=2 format=3 uid="uid://bpnfuvp2n6kup"]

[ext_resource type="Script" uid="uid://dpgedb6yrtf3q" path="res://src/ui/GridButtonScene.gd" id="1_script"]

[node name="GridButtonScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Tutorial Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonGrid" type="GridContainer" parent="MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Button1" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Button 1"

[node name="Button2" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Button 2"

[node name="Button3" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Button 3"

[node name="Button4" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Button 4"

[node name="Button5" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Button 5"

[node name="Button6" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Button 6"

[node name="Button7" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 7"

[node name="Button8" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 8"

[node name="Button9" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 9"

[node name="Button10" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 10"

[node name="Button11" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 11"

[node name="Button12" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 12"

[node name="Button13" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 13"

[node name="Button14" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 14"

[node name="Button15" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 15"

[node name="Button16" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 16"

[node name="Button17" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 17"

[node name="Button18" type="Button" parent="MainContainer/ScrollContainer/ButtonGrid"]
layout_mode = 2
text = "Button 18"

[node name="BackButton" type="Button" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"
